--- a/FaceEmotionRecognition/FaceEmotionRecognition.UWP/project.json
+++ b/FaceEmotionRecognition/FaceEmotionRecognition.UWP/project.json
@@ -1,7 +1,8 @@
 ﻿{
   "dependencies": {
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0",
-    "Xamarin.Forms": "2.0.0.6482"
+    "Xam.Plugin.Media": "2.6.1",
+    "Xamarin.Forms": "2.2.0.45"
   },
   "frameworks": {
     "uap10.0": {}
